sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    cert-manager.io/cluster-issuer: "prod-issuer"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: "https://raw.githubusercontent.com/Sonarr/Sonarr/develop/Logo/128.png"
    forecastle.stakater.com/appName: "sonarr"
    forecastle.stakater.com/group: "MediaCenter"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sonarr.geekhomeinside.io
      secretName: sonarr-ingress-tls
  rules:
    - host: sonarr.geekhomeinside.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
